--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="assest/img/icons/favicon.png">
+    <link rel="shortcut icon" href="assets/img/icons/favicon.png">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/style/fonts/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/style/css/bootstrap.min.css">
@@ -13,10 +14,10 @@
     <title>ELACSTA</title>
   </head>
   <body id="top">
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top">
 
       <a class="navbar-brand" href="#top">
-        <img src="assets/img/icons/elacsta.png" width="160" height="30" alt="logo" >
+        <img src="assest/img/icons/elacsta.png" width="160" height="30" alt="logo">
       </a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,32 +27,32 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item ">
-            <a class="nav-link" href="#">Get involved </a>
+          <li class="nav-item">
+            <a class="nav-link" href="#">GET INVOLVED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Mission</a>
+            <a class="nav-link" href="#">MISSION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Team</a>
+            <a class="nav-link" href="#">MEMBERS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Events</a>
+              <a class="nav-link" href="#">EVENT</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Blogs</a>
+              <a class="nav-link" href="#">BLOG</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " href="#">Contacts</a>
+              <a class="nav-link" href="#">CONTACT</a>
           </li>
         </ul>
-        
+
       </div>
     </nav>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="assets/style/js/bootstrap.min.js"></script>
+    <script src="assets/style/js/jquery.min.js"></script>
     <script src="assets/style/js/popper.min.js"></script>
     <script src="assets/style/js/bootstrap.min.js"></script>
     <script src="assets/style/js/main.js"></script>
