--- a/index.html
+++ b/index.html
@@ -49,7 +49,23 @@
 
       </div>
     </nav>
-
+  <section id="header">
+    <div class="container-fluid text-center" id="header-container">
+      <div class="text-container">
+        <h1><br>ELACSTA for ALL,ALL for ELACSTA</h1>
+        <h4>need content<br></h4>
+        <h4>need content<br></h4>
+        <h4>need content<br></h4>
+      </div>
+    </div><!--end container-->
+    <div class="container-fluid" id="footer-container">
+      <button class="btn btn-custom" onclick="window.location.href = 'https://www.w3schools.com/jsref/event_onclick.asp';">REGISTER</button>
+      <p class="text-left event-details">
+        <a href="#">Next Event:</a>Test event may 9 <sup>th</sup>2020
+      </p>
+      <p class="text-left">Elacsta ,NSS college of Engineering</p>
+    </div>
+  </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/style/js/jquery.min.js"></script>
