--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div><!--end container-->
     <div class="container-fluid" id="footer-container">
-      <button class="btn btn-custom" onclick="window.location.href = 'https://www.w3schools.com/jsref/event_onclick.asp';">REGISTER</button>
+      <button class="btn btn-custom" onclick="window.location.href = 'https://docs.google.com/forms/d/e/1FAIpQLSe96POA0OlbPg51vCjX4JsrsmUnUlEes7KxjBJ3WuOs2_dvJQ/viewform';">REGISTER</button>
       <p class="text-left event-details">
         <a href="#">Next Event:</a>Test event may 9 <sup>th</sup>2020
       </p>
