--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">GET INVOLVED</a>
+            <a class="nav-link" href="#get-involved">GET INVOLVED</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">MISSION</a>
@@ -52,10 +52,10 @@
   <section id="header">
     <div class="container-fluid text-center" id="header-container">
       <div class="text-container">
-        <h1><br>ELACSTA for ALL,ALL for ELACSTA</h1>
-        <h4>need content<br></h4>
-        <h4>need content<br></h4>
-        <h4>need content<br></h4>
+        <h1><br>Welcome to Elacsta!!</h1>
+        <h4>ELectronics And Communication STudents Association-ELACSTA<br></h4>
+        <h4>An initiativeby ECE department to learn, build and grow as ECE techies<br></h4>
+        <h4>NSS College Of Engineering,Palakkad<br></h4>
       </div>
     </div><!--end container-->
     <div class="container-fluid" id="footer-container">
@@ -64,6 +64,34 @@
         <a href="#">Next Event:</a>Test event may 9 <sup>th</sup>2020
       </p>
       <p class="text-left">Elacsta ,NSS college of Engineering</p>
+    </div>
+  </section>
+  <!---------------------------------get involved--------------->
+  <section id="get-involved">
+    <div class="container text-center">
+      <h3>GET INVOLVED</h3>
+      <div class="row">
+        <div class="col-md-4">
+          <img src="assets/img/get-involved1.png" height="213" alt="Meetup" >
+          <h4>Meet up with us!</h4>
+          <p>Mail us, your suggestions</p>
+          <a href="mailto: beingunique2000@gmail.com" class="btn btn-custom">Mail us here</a>
+        </div>
+
+        <div class="col-md-4">
+          <img src="assets/img/get-involved2.png" height="213" alt="Collaborate with us" >
+          <h4> We Collaborate</h4>
+          <p>Collaborate with us to host events</p>
+          <a href="mailto: beingunique2000@gmail.com" class="btn btn-custom">Collaborate</a>
+        </div>
+
+        <div class="col-md-4">
+          <img src="assets/img/youtube.PNG" width="213px" height="213px" alt="youTube" >
+          <h4>youTube Channel</h4>
+          <p>Reach to our youTube channel for interesting contents</p>
+          <a href="https://www.youtube.com/results?search_query=elacsta" class="btn btn-custom">youTube</a>
+        </div>
+      </div>
     </div>
   </section>
     <!-- Optional JavaScript -->
