--- a/index.html
+++ b/index.html
@@ -75,18 +75,18 @@
           <img src="assets/img/get-involved1.png" height="213" alt="Meetup" >
           <h4>Meet up with us!</h4>
           <p>Mail us, your suggestions</p>
-          <a href="mailto: beingunique2000@gmail.com" class="btn btn-custom">Mail us here</a>
+          <a href="mailto: nssceelacsta@gmail.com" class="btn btn-custom">Mail us here</a>
         </div>
 
         <div class="col-md-4">
           <img src="assets/img/get-involved2.png" height="213" alt="Collaborate with us" >
           <h4> We Collaborate</h4>
           <p>Collaborate with us to host events</p>
-          <a href="mailto: beingunique2000@gmail.com" class="btn btn-custom">Collaborate</a>
+          <a href="mailto: nssceelacsta@gmail.com" class="btn btn-custom">Collaborate</a>
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/icons/elacsta.png" width="213px" height="213px" alt="youTube" >
+          <img src="assets/img/icons/youtube.png" height="213" alt="youTube" >
           <h4>youTube Channel</h4>
           <p>Reach to our youTube channel for interesting contents</p>
           <a href="https://www.youtube.com/results?search_query=elacsta" class="btn btn-custom">youTube</a>
