--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="nav-link" href="#get-involved">GET INVOLVED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">MISSION</a>
+            <a class="nav-link" href="#mission">MISSION</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">MEMBERS</a>
@@ -94,6 +94,55 @@
       </div>
     </div>
   </section>
+  <!-------------------------Mission---------------------->
+  <sectiion id="mission">
+    <div class="container text-center">
+      <h3>OUR MISSION</h3>
+      <h5>"Many ideas grow better when transplanted into another mind than the one where they sprang up."<br>-Oliver Wendell Holmes</h5>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="icon-container">
+              <img  src="assets/img/icons/mission1.png" alt="idea">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Share Knowledge</h5>
+              <p class="card-text">
+               Share Knowledge and working practice to make the best technology choices.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="icon-container">
+              <img  src="assets/img/icons/mission2.png" alt="support">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Share Knowledge</h5>
+              <p class="card-text">
+               Share Knowledge and working practice to make the best technology choices.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="icon-container">
+              <img  src="assets/img/icons/mission3.png" alt="encourage">
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">Share Knowledge</h5>
+              <p class="card-text">
+               Share Knowledge and working practice to make the best technology choices.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </sectiion>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/style/js/jquery.min.js"></script>
