--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="text-container">
         <h1><br>Welcome to Elacsta!!</h1>
         <h4>ELectronics And Communication STudents Association-ELACSTA<br></h4>
-        <h4>An initiativeby ECE department to learn, build and grow as ECE techies<br></h4>
+        <h4>An initiative by ECE department to learn, build and grow as ECE techies<br></h4>
         <h4>NSS College Of Engineering,Palakkad<br></h4>
       </div>
     </div><!--end container-->
@@ -72,23 +72,23 @@
       <h3>GET INVOLVED</h3>
       <div class="row">
         <div class="col-md-4">
-          <img src="assets/img/get-involved1.png" height="213" alt="Meetup" >
+          <img src="assets/img/get-involved1.png"  alt="Meetup" >
           <h4>Meet up with us!</h4>
-          <p>Mail us, your suggestions</p>
+          <p>Mail us your suggestions</p>
           <a href="mailto: nssceelacsta@gmail.com" class="btn btn-custom">Mail us here</a>
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/get-involved2.png" height="213" alt="Collaborate with us" >
+          <img src="assets/img/get-involved2.png"  alt="Collaborate with us" >
           <h4> We Collaborate</h4>
           <p>Collaborate with us to host events</p>
           <a href="mailto: nssceelacsta@gmail.com" class="btn btn-custom">Collaborate</a>
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/icons/youtube.png" height="213" alt="youTube" >
+          <img src="assets/img/icons/youtube.png"  alt="youTube" >
           <h4>youTube Channel</h4>
-          <p>Reach to our youTube channel for interesting contents</p>
+          <p>Reach out to our youTube channel </p>
           <a href="https://www.youtube.com/results?search_query=elacsta" class="btn btn-custom">youTube</a>
         </div>
       </div>
@@ -119,9 +119,9 @@
               <img  src="assets/img/icons/mission2.png" alt="support">
             </div>
             <div class="card-body">
-              <h5 class="card-title">Share Knowledge</h5>
+              <h5 class="card-title">Together we grow</h5>
               <p class="card-text">
-               Share Knowledge and working practice to make the best technology choices.
+               Bring people together under one roof of knowledge, learning and growth.
               </p>
             </div>
           </div>
@@ -132,9 +132,9 @@
               <img  src="assets/img/icons/mission3.png" alt="encourage">
             </div>
             <div class="card-body">
-              <h5 class="card-title">Share Knowledge</h5>
+              <h5 class="card-title">We encourage</h5>
               <p class="card-text">
-               Share Knowledge and working practice to make the best technology choices.
+               We encourage our members to push their limits in terms of skills and personality.
               </p>
             </div>
           </div>
