--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="col-md-4">
           <img src="assets/img/get-involved1.png"  alt="Meetup" >
           <h4>Meet up with us!</h4>
-          <p>Mail us your suggestions</p>
+          <p>Mail us down below for your suggestions</p>
           <a href="mailto: nssceelacsta@gmail.com" class="btn btn-custom">Mail us here</a>
         </div>
 
