--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/style/fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/style/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/style/css/owl.theme.default.min.css">    
     <link rel="stylesheet" href="assets/style/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style/css/style.css">
 
@@ -34,7 +36,7 @@
             <a class="nav-link" href="#mission">MISSION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">MEMBERS</a>
+            <a class="nav-link" href="#members">PANEL</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="#">EVENT</a>
@@ -143,11 +145,27 @@
 
     </div>
   </sectiion>
+  <!--members-->
+  <section id="members">
+    <div class="container text-center">
+      <h3>PANEL MEMBERS</h3>
+
+      <div id="members-slider" class="owl-carousel owl-theme">
+        <img src="assets/img/member1.jpg" alt="chairperson">
+        <img src="assets/img/member2.jpg" alt="s">
+        <img src="assets/img/member3.jpg" alt="d">
+        <img src="assets/img/member4.jpg" alt="p">
+        <img src="assets/img/member5.jpg" alt="0p">
+      </div>
+
+    </div>
+  </section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/style/js/jquery.min.js"></script>
     <script src="assets/style/js/popper.min.js"></script>
     <script src="assets/style/js/bootstrap.min.js"></script>
+    <script src="assets/style/js/owl.carousel.min.js"></script>
     <script src="assets/style/js/main.js"></script>
   </body>
 </html>
