--- a/index.html
+++ b/index.html
@@ -154,8 +154,10 @@
         <img src="assets/img/member4.jpg" alt="chairperson">
         <img src="assets/img/member2.jpg" alt="s">
         <img src="assets/img/member3.jpg" alt="d">
+        <img src="assets/img/member7.jpg" alt="ter" >
         <img src="assets/img/member5.jpg" alt="p">
-        <img src="assets/img/member1.jpg" alt="0p">
+        <img src="assets/img/member6.jpg" alt="t" >
+        <img src="assets/img/member 1.jpg" alt="0p">
       </div>
 
     </div>
