--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@
         <img src="assets/img/member7.jpg" alt="ter" >
         <img src="assets/img/member5.jpg" alt="p">
         <img src="assets/img/member6.jpg" alt="t" >
+        <img src="assets/img/member8.jpg"alt="mu">
+        <img src="assets/img/member9.jpg" alt="as" >
         <img src="assets/img/member 1.jpg" alt="0p">
       </div>
 
