--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="col-md-3">
               <div class="card" style="width: 15rem;" >
                 <a href="https://www.youtube.com/watch?v=Uaf86AzOAxQ&list=PLC2S9xBpesdBCXLm2xJZd9-YKw7jZymPK">
-                <img class="card-img-top" src="assets/img/eventq.jpg" alt="img">
+                <img class="card-img-top" src="assets/img/Eventq.jpg" alt="img">
                 </a>
                 <div class="card-body">
                   <h4 class="card-title">github tutorial</h4>
