--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
               <a class="nav-link" href="#event">EVENT</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">BLOG</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">CONTACT</a>
+              <a class="nav-link" href="#follow">FOLLOW US</a>
           </li>
         </ul>
 
@@ -58,6 +55,9 @@
         <h4>ELectronics And Communication STudents Association-ELACSTA<br></h4>
         <h4>An initiative by ECE department to learn, build and grow as ECE techies<br></h4>
         <h4>NSS College Of Engineering,Palakkad<br></h4>
+        <div class="text-left">
+        <h6>RR</h6>
+        </div>
       </div>
     </div><!--end container-->
     <div class="container-fluid" id="footer-container">
@@ -228,6 +228,19 @@
       
     </div>
   </section>
+  <!----------------------------------------FOLLOW---------------------------------->
+  <section id="follow">
+    <div class="container text-center">
+      <h3>FOLLOW US</h3>
+      <a href="https://www.instagram.com/nssce.elacsta/">
+        <img src="assets/img/instagram.jpg">
+      </a>
+      <a href="https://www.facebook.com/nssceelacsta-100353664691618/">
+        <img src="assets/img/facebook.png">
+      </a>
+
+    </div>
+  </section> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/style/js/jquery.min.js"></script>
