--- a/index.html
+++ b/index.html
@@ -241,6 +241,19 @@
 
     </div>
   </section> 
+  <!--------------------------------------------footer--------------------------------->
+  <footer>
+    <div class="container-fluid text-center">
+      <div class="college">
+        <a href="#">
+          <img src="assets/img/nssce.png">
+        </a>
+      </div>
+      <div class="design">
+        <p>ELectronics and Communication Engineering Departmrnt<br>NSS College of Engineering,Palakkad</p>
+      </div>
+    </div>
+  </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="assets/style/js/jquery.min.js"></script>
