--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#get-involved">GET INVOLVED</a>
+            <a class="nav-link btn" href="#get-involved">GET INVOLVED</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#mission">MISSION</a>
+            <a class="nav-link btn" href="#mission">MISSION</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#members">PANEL</a>
+            <a class="nav-link btn" href="#members">PANEL</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#event">EVENT</a>
+              <a class="nav-link btn" href="#event">EVENT</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#follow">FOLLOW US</a>
+              <a class="nav-link btn" href="#follow">FOLLOW US</a>
           </li>
         </ul>
 
