--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/icons/youtube.png"  alt="youTube" >
-          <h4>youTube Channel</h4>
-          <p>Reach out to our youTube channel </p>
-          <a href="https://www.youtube.com/results?search_query=elacsta" class="btn btn-custom">youTube</a>
+          <img src="assets/img/icons/youtube.png"  alt="YouTube" >
+          <h4>YouTube Channel</h4>
+          <p>Reach out to our YouTube channel </p>
+          <a href="https://www.youtube.com/results?search_query=elacsta" class="btn btn-custom">YouTube</a>
         </div>
       </div>
     </div>
@@ -148,6 +148,11 @@
   <!--members-->
   <section id="members">
     <div class="container text-center">
+      <h3>STAFF ADVISOR</h3>
+      <div id="staff" class="text-center">
+        <img src="">
+        <h4>Prof. Vinod G<br>ELectronics and Communication Engineering Departmrnt<br>NSS college of Engineering</h4>
+      </div>
       <h3>PANEL MEMBERS</h3>
 
       <div id="members-slider" class="owl-carousel owl-theme">
