--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
     <div class="container text-center">
       <h3>STAFF ADVISOR</h3>
       <div id="staff" class="text-center">
-        <img src="">
-        <h4>Associate Professor Vinod G<br>ELectronics and Communication Engineering Departmrnt<br>NSS college of Engineering</h4>
+        <img src="assets/img/vg.jpg" alt="staff">
+        <h4>Associate Professor Vinod G<br>ELectronics and Communication Engineering Department<br>NSS college of Engineering</h4>
       </div>
       <h3>PANEL MEMBERS</h3>
 
