--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h3>STAFF ADVISOR</h3>
       <div id="staff" class="text-center">
         <img src="assets/img/vg.jpg" alt="staff">
-        <h4>Associate Professor Vinod G<br>ELectronics and Communication Engineering Department<br>NSS college of Engineering</h4>
+        <h4> Vinod G<br>Associate Professor<br>ELectronics and Communication Engineering Department<br>NSS college of Engineering</h4>
       </div>
       <h3>PANEL MEMBERS</h3>
 
